fixed main menu music overlapping game music

--- a/assets/stylesheet/app.css
+++ b/assets/stylesheet/app.css
@@ -14,6 +14,13 @@
   z-index: 2;
   margin-left: 60%;
 }
+.main-menu-button-div{
+  z-index: 2;
+}
+
+.main-menu-toggle-audio-button {
+  margin: 0;
+}
 
 #main-menu > figure {
   margin: 0;
